--- a/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
@@ -7,7 +7,7 @@
     android:background="?android:attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/stab_border"
+        android:id="@+id/estab_border"
         android:layout_width="5dp"
         android:layout_height="match_parent"
         android:background="@drawable/linear_border"/>
@@ -17,34 +17,22 @@
         android:layout_height="match_parent"
         android:layout_marginStart="15dp">
 
-        <android.support.v4.widget.CircleImageView
+        <ImageView
             android:id="@+id/estab_img"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_home" />
 
-        <LinearLayout
+        <TextView
+            android:text="Bocaiúva"
+            android:id="@+id/estab_name"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/estab_img"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"/>
 
-            <TextView
-                android:text="Bocaiúva"
-                android:id="@+id/estab_name"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/estab_state"
-                android:text="Minas Gerais"
-                android:textAppearance="@android:style/TextAppearance.Material.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
