--- a/ProjectDivulga/app/src/main/res/layout/fragment_estabelecimentos.xml
+++ b/ProjectDivulga/app/src/main/res/layout/fragment_estabelecimentos.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     tools:context="divulga.com.br.projectdivulga.fragments.Estabelecimentos">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/estab_rec"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
