--- a/ProjectDivulga/app/src/main/res/drawable/linear_border2.xml
+++ b/ProjectDivulga/app/src/main/res/drawable/linear_border2.xml
@@ -6,7 +6,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="5dp"
-                android:color="#F44333" />
+                android:color="@color/colorBorder1" />
         </shape>
     </item>
 
