--- a/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:orientation="horizontal"
-    android:clickable="true"
-    android:background="?android:attr/selectableItemBackground">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="5dp"
+    card_view:cardCornerRadius="5dp">
 
-    <ImageView
-        android:id="@+id/estab_border"
-        android:layout_width="5dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/linear_border"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="15dp">
-
-        <ImageView
-            android:id="@+id/estab_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_home" />
-
-        <TextView
-            android:text="Bocaiúva"
-            android:id="@+id/estab_name"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/estab_img"
-            android:layout_marginLeft="10dp"/>
+            android:clickable="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:focusable="true">
 
-    </RelativeLayout>
-</LinearLayout>
+            <TextView
+                android:text="Estabelecimento"
+                android:id="@+id/estab_name"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_margin="10dp"/>
+
+
+            <ImageView
+                android:id="@+id/estab_img"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@color/colorPrimaryDark"
+                android:layout_below="@id/estab_name"
+                android:layout_marginBottom="10dp"/>
+        </RelativeLayout>
+
+</android.support.v7.widget.CardView>
