--- a/ProjectDivulga/app/src/main/res/values/colors.xml
+++ b/ProjectDivulga/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#009688</color>
+    <color name="colorBorder0">#448AFF</color>
+    <color name="colorBorder1">#F44333</color>
+    <color name="colorBorder2">#009688</color>
 </resources>
