--- a/ProjectDivulga/app/src/main/res/layout/tel_util_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/tel_util_rec_layout.xml
@@ -17,7 +17,7 @@
         android:background="?android:attr/selectableItemBackground"
         android:focusable="true">
         <ImageView
-            android:id="@+id/tel_ico"
+            android:id="@+id/tel_icon"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/ic_taxi"
@@ -27,7 +27,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/tel_ico"
+            android:layout_toEndOf="@id/tel_icon"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:layout_margin="10dp">
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_call"
-            android:layout_margin="2dp"
+            android:layout_margin="10dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
