--- a/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,19 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_cidades"
             android:icon="@drawable/ic_home"
             android:title="Principal" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_sobre"
             android:icon="@drawable/ic_info"
             android:title="Sobre" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_anuncie"
             android:icon="@drawable/ic_anounce"
             android:title="Anuncie" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_tel"
             android:icon="@drawable/ic_call"
             android:title="Telefones Uteis" />
     </group>
