--- a/ProjectDivulga/app/src/main/res/layout/cat_block_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/cat_block_layout.xml
@@ -2,44 +2,50 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="5dp"
-    card_view:cardCornerRadius="5dp">
+    card_view:cardCornerRadius="0dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:background="?android:attr/selectableItemBackground"
-        android:focusable="true">
-
-        <ImageView
-            android:id="@+id/cat_img"
-            android:layout_width="@dimen/album_cover_height"
-            android:layout_height="@dimen/album_cover_height"
-            android:src="@drawable/ic_pic"
-            android:layout_alignParentStart="true"/>
-
-        <TextView
-            android:text="Categoria"
-            android:id="@+id/cat_name"
-            android:textAppearance="@android:style/TextAppearance.Material.Small"
-            android:textColor="#000"
+        android:focusable="true"
+        android:layout_gravity="center">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cat_img"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"/>
+            android:layout_margin="40dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/cat_img"
+                    android:layout_width="@dimen/album_cover_height"
+                    android:layout_height="@dimen/album_cover_height"
+                    android:src="@drawable/ic_pic"
+                    android:layout_gravity="center_horizontal"/>
+
+                <TextView
+                    android:text="Categoria"
+                    android:id="@+id/cat_name"
+                    android:textAppearance="@android:style/TextAppearance.Material.Small"
+                    android:textColor="#000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"/>
+
+            </LinearLayout>
 
 
 
-    </RelativeLayout>
-
+        </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
