--- a/ProjectDivulga/app/src/main/res/layout/activity_establishment_show.xml
+++ b/ProjectDivulga/app/src/main/res/layout/activity_establishment_show.xml
@@ -20,14 +20,16 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:expandedTitleTextAppearance="@android:style/TextAppearance.Material.Widget.ActionBar.Title"
+            app:collapsedTitleTextAppearance="@android:style/TextAppearance.Material.Widget.ActionBar.Subtitle">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
