--- a/ProjectDivulga/app/src/main/res/layout/content_establishment_show.xml
+++ b/ProjectDivulga/app/src/main/res/layout/content_establishment_show.xml
@@ -64,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp">
                 <LinearLayout
+                    android:id="@+id/showLocationL"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clickable="true"
