--- a/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
@@ -9,32 +9,40 @@
     android:layout_marginRight="10dp"
     android:layout_marginBottom="5dp"
     card_view:cardCornerRadius="5dp">
-
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:focusable="true">
-
-            <TextView
-                android:text="Estabelecimento"
-                android:id="@+id/estab_name"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="#000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/click_estab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_margin="10dp"/>
+                android:clickable="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:focusable="true">
+                <TextView
+                    android:text="Estabelecimento"
+                    android:id="@+id/estab_name"
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:textColor="#000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="10dp"/>
 
-
-            <ImageView
-                android:id="@+id/estab_img"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@color/colorPrimaryDark"
-                android:layout_below="@id/estab_name"
-                android:layout_marginBottom="10dp"/>
+                <ImageView
+                    android:id="@+id/estab_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:src="@color/colorPrimaryDark"
+                    android:layout_below="@id/estab_name"
+                    android:layout_marginBottom="10dp"/>
+            </RelativeLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/estab_fab_fav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="3dp" />
         </RelativeLayout>
-
 </android.support.v7.widget.CardView>
