--- a/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,10 @@
             android:icon="@drawable/ic_home"
             android:title="@string/principal" />
         <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_star"
+            android:title="@string/favoritos" />
+        <item
             android:id="@+id/nav_sobre"
             android:icon="@drawable/ic_info"
             android:title="@string/sobre" />
