--- a/ProjectDivulga/app/src/main/res/layout/fragment_estabelecimentos.xml
+++ b/ProjectDivulga/app/src/main/res/layout/fragment_estabelecimentos.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     tools:context="divulga.com.br.projectdivulga.fragments.Estabelecimentos">
 
+    <include layout="@layout/empty_rec" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/estab_rec"
         android:layout_width="match_parent"
