--- a/ProjectDivulga/app/src/main/res/layout/empty_rec.xml
+++ b/ProjectDivulga/app/src/main/res/layout/empty_rec.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/empty_rec">
+    android:id="@+id/empty_rec"
+    android:visibility="invisible">
 
     <LinearLayout
         android:layout_width="wrap_content"
