--- a/ProjectDivulga/app/src/main/res/values/styles.xml
+++ b/ProjectDivulga/app/src/main/res/values/styles.xml
@@ -17,4 +17,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.Splash" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
 </resources>
