--- a/ProjectDivulga/app/src/main/res/layout/activity_splash.xml
+++ b/ProjectDivulga/app/src/main/res/layout/activity_splash.xml
@@ -12,9 +12,19 @@
 
 
     <ProgressBar
+        android:id="@+id/progress_splash"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
         android:indeterminateTint="#FFF"
         android:indeterminate="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/progress_splash"
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp"
+        android:textColor="#FFF"
+        android:text="@string/app_name"/>
+
 </RelativeLayout>
