--- a/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/estab_rec_layout.xml
@@ -12,6 +12,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <RelativeLayout
                 android:id="@+id/click_estab"
                 android:layout_width="wrap_content"
@@ -28,6 +29,31 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_margin="10dp"/>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:elevation="50dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_clock"
+                        android:elevation="51dp"
+                        android:tint="#FFF"
+                        android:layout_centerInParent="true"
+                        />
+
+                    <ImageView
+                        android:id="@+id/estab_icon_open"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/ic_circle"
+                        android:backgroundTint="@color/green_open"
+                        />
+
+                </RelativeLayout>
 
                 <ImageView
                     android:id="@+id/estab_img"
