--- a/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjectDivulga/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_cidades"
-            android:icon="@drawable/ic_home"
+            android:icon="@drawable/ic_store"
             android:title="@string/principal" />
         <item
             android:id="@+id/nav_fav"
