--- a/ProjectDivulga/app/src/main/res/values/colors.xml
+++ b/ProjectDivulga/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="transparent">@android:color/transparent</color>
     <color name="viewBg">#f1f5f8</color>
     <color name="album_title">#4c4c4c</color>
+    <color name="red_close">#F44336</color>
+    <color name="green_open">#4CAF50</color>
 </resources>
