--- a/ProjectDivulga/app/src/main/res/layout/activity_custom_progress_dialog.xml
+++ b/ProjectDivulga/app/src/main/res/layout/activity_custom_progress_dialog.xml
@@ -6,7 +6,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:indeterminateTint="#FFF"
+        android:indeterminateTint="@android:color/white"
         android:indeterminate="true"/>
 
 
