--- a/ProjectDivulga/app/src/debug/res/values/google_maps_api.xml
+++ b/ProjectDivulga/app/src/debug/res/values/google_maps_api.xml
@@ -1,10 +1,26 @@
 <resources>
     <!--
-    TODO: Before you run your application, you need a Google Maps API key.
+
+    Nome do alias: androiddebugkey
+    Data de criação: 03/06/2016
+    Tipo de entrada: PrivateKeyEntry
+    Comprimento da cadeia de certificados: 1
+    Certificado[1]:
+    Proprietário: C=US, O=Android, CN=Android Debug
+    Emissor: C=US, O=Android, CN=Android Debug
+    Número de série: 1
+    Válido de: Fri Jun 03 19:56:16 BRT 2016 a: Sun May 27 19:56:16 BRT 2046
+    Fingerprints do certificado:
+         MD5:  13:59:87:8F:AD:90:90:DB:B4:38:37:BF:63:74:B3:D1
+         SHA1: C9:C3:EC:10:36:0A:F9:BC:F0:88:45:7B:98:60:E6:C2:44:44:9E:89
+         SHA256: A7:FB:4C:E9:A3:5A:23:C8:F7:5B:03:F2:9D:B2:E3:90:B4:8F:7E:70:A1:78:CF:EC:2F:65:CE:61:29:E4:F1:C4
+         Nome do algoritmo de assinatura: SHA1withRSA
+         Versão: 1
+
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=D0:41:1D:C4:4F:75:08:F0:09:98:2D:8F:13:E7:5B:6E:ED:CE:2F:23%3Bdivulga.com.br.projectdivulga
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=C9:C3:EC:10:36:0A:F9:BC:F0:88:45:7B:98:60:E6:C2:44:44:9E:89%3Bdivulga.com.br.projectdivulga
 
     You can also add your credentials to an existing key, using this line:
     D0:41:1D:C4:4F:75:08:F0:09:98:2D:8F:13:E7:5B:6E:ED:CE:2F:23;divulga.com.br.projectdivulga
@@ -16,6 +32,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyDuucJT6g9SM7_KdpGs20lVvNPeBTZnYYU
+        AIzaSyCSbm7b7If5LQPx6Ml1BzSY8nl0AHGbWfs
     </string>
 </resources>
