--- a/ProjectDivulga/app/src/main/res/layout/tel_util_rec_layout.xml
+++ b/ProjectDivulga/app/src/main/res/layout/tel_util_rec_layout.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_call"
             android:layout_margin="10dp"
+            android:elevation="0dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
